fixed IE layout issues
Former-commit-id: c6987f97b3eebc1c8e0212db9b4ff2cd86fb7239

--- a/intermine/webapp/main/resources/webapp/css/tips.css
+++ b/intermine/webapp/main/resources/webapp/css/tips.css
@@ -4,4 +4,6 @@
 }
 #tipbox h3 {
 	margin:0px 0px 5px 0px;
+	background:none;
+	color:#5C0075;
 }
